kubernetes/apps/media/exportarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exportarr
  namespace: media
  labels:
    app.kubernetes.io/name: exportarr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: exportarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: exportarr
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
          args: [sonarr]
          ports:
            - name: sonarr
              containerPort: 9707
              protocol: TCP
          livenessProbe: &sonarr-probe
            httpGet:
              path: /healthz
              port: sonarr
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe: *sonarr-probe
          securityContext: &security-context
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
          resources: &resources
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
        - name: radarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
          args: [radarr]
          ports:
            - name: radarr
              containerPort: 9708
              protocol: TCP
          livenessProbe: &radarr-probe
            httpGet:
              path: /healthz
              port: radarr
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe: *radarr-probe
          securityContext: *security-context
          resources: *resources
        - name: prowlarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
          args: [prowlarr]
          ports:
            - name: prowlarr
              containerPort: 9709
              protocol: TCP
          livenessProbe: &prowlarr-probe
            httpGet:
              path: /healthz
              port: prowlarr
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe: *prowlarr-probe
          securityContext: *security-context
          resources: *resources
        - name: sabnzbd
          image: ghcr.io/onedr0p/exportarr:v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
          args: [sabnzbd]
          ports:
            - name: sabnzbd
              containerPort: 9710
              protocol: TCP
          livenessProbe: &sabnzbd-probe
            httpGet:
              path: /healthz
              port: sabnzbd
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe: *sabnzbd-probe
          securityContext: *security-context
          resources: *resources
