kubernetes/apps/media/exportarr/app/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exportarr-ingress
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: exportarr
  policyTypes: [Ingress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - { protocol: TCP, port: 9707 }
        - { protocol: TCP, port: 9708 }
        - { protocol: TCP, port: 9709 }
        - { protocol: TCP, port: 9710 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: exportarr-egress
  namespace: media
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: exportarr
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarr
      ports:
        - { protocol: TCP, port: 8989 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: radarr
      ports:
        - { protocol: TCP, port: 7878 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prowlarr
      ports:
        - { protocol: TCP, port: 9696 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sabnzbd
      ports:
        - { protocol: TCP, port: 8080 }
